<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".AdminActivity">


    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:shrinkColumns="*"  android:stretchColumns="*" android:background="#ffffe9b7"
        android:baselineAligned="false"
        android:touchscreenBlocksFocus="false">


        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/title_activity_create_user"
                android:onClick="createUsers" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/list_all"
                android:onClick="listAllBooks" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/book_borrow"
                android:onClick="bookBorrow" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/book_return"
                android:onClick="bookReturn" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/library_news_events"
                android:onClick="libraryNews" />
        </TableRow>

    </TableLayout>

</LinearLayout>