<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightimage"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/lightimage">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36dp"
            android:text="@string/service_request"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff1c101c"
            android:layout_marginBottom="50dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="80dp"
            android:text="@string/choose_date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff2c221f" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@+id/textView2"
            android:ems="10"
            android:textColor="#ff0a0207"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="39dp">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="38dp"
            android:text="@string/select_time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff200f1c" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"

            android:textColor="#ff240d1d"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignRight="@+id/editText1"
            android:layout_alignEnd="@+id/editText1"
            android:layout_alignLeft="@+id/editText1"
            android:layout_alignStart="@+id/editText1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_service"
            android:id="@+id/textView10"

            android:textSize="17dp"
            android:textColor="#ff1f1b0f"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView1"
            android:layout_alignBottom="@+id/checkBox6" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laptop"
            android:id="@+id/checkBox6"
            android:layout_below="@+id/textView1"
            android:layout_alignLeft="@+id/editText1"
            android:layout_alignStart="@+id/editText1" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room_reservation"
            android:id="@+id/checkBox7"
            android:layout_below="@+id/textView1"
            android:layout_toRightOf="@+id/checkBox6"
            android:layout_toEndOf="@+id/checkBox6" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/submit_request"
            style="@android:style/Holo.SegmentedButton"
            android:background="#ffffbd5e"
            android:layout_marginTop="43dp"
            android:layout_below="@+id/editText2"
            android:layout_toRightOf="@+id/textView10"
            android:onClick="request"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:longClickable="true" />


        <!--  <TextView
              android:id="@+id/textView4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignLeft="@+id/textView3"
              android:layout_below="@+id/textView3"
              android:layout_marginLeft="30dp"
              android:layout_marginTop="48dp"
              android:text="@string/attempts"
              android:textAppearance="?android:attr/textAppearanceMedium" /> -->

        <!--   <TextView
               android:id="@+id/textView5"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignRight="@+id/textView1"
               android:layout_alignTop="@+id/textView4"
               android:text="TextView" /> -->
    </RelativeLayout>
</LinearLayout>
