<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texture"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@drawable/blueb">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:text="@string/register_here"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff142547"
            android:textSize="23dp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="50dp"
            android:text="@string/user_id"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff2b100f"
            style="@style/AppTheme" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_marginLeft="32dp"
            android:layout_toRightOf="@+id/textView2"
            android:ems="10"
            android:textColor="#ff0d0d0d"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView2"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="38dp"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff271c27"
            style="@style/AppTheme" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignLeft="@+id/editText1"
            android:layout_alignStart="@+id/editText1"
            android:textColor="#ff0f0f0f"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="38dp"
            android:text="@string/email_id"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff241518" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignLeft="@+id/editText1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:textColor="#ff1f1f1f"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveUser"
            android:text="@string/register"
            android:layout_below="@+id/textView5"
            android:layout_alignLeft="@+id/editText3"
            android:layout_alignStart="@+id/editText3"
            android:layout_marginTop="37dp"
            android:layout_alignRight="@+id/editText3"
            android:layout_alignEnd="@+id/editText3"
            style="@android:style/TextAppearance"
            android:background="#ffffad49" />



    </RelativeLayout>
</LinearLayout>

